# Virtual_Worlds_Racing_discord

./: .env.example  .gitignore  Dockerfile  README.md  bot_1.py  db_models.py  discord.py  main.py  pyproject.toml  rider_cmd.py
src/: cats_and_chans.py  untils.py  vwr_exceptions.py
src/bot/: client.py
src/cogs/: administrator_cog.py  club.py  club_cog.py  membership_cog.py  org_cog.py  rider.py  rider_cog.py  user_cog.py
src/database/: db_models.py  db_utils.py  test_db.py
src/extras/: channel_mgnt.py  roles_mgnt.py  untils.py  vwr_exceptions.py
src/forms/: club.py  club_forms.py  org_forms.py  registration.py  rider_forms.py
src/utils/: imports.py  logger.py  lookup.py
