[project]
name = "Virtual_Worlds_Racing_discord"
version = "0.1.0"
description = "Virtual Worlds Racing Discord Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logfire>=2.11.1",
    "peewee>=3.17.8",
    "psycopg2-binary>=2.9.10",
    "py-cord>=2.6.1",
    "python-dotenv>=1.0.1",
]
